Fixed ---- 1681970 - Maximum execution time exceeded Leave Assign
Fix
---

HR-Admins will be given the option to select employees from a pop
up, since HR-Admins will see all employees. With paging in the
pop up, memory overflows and time outs will be fixed when there
are large number of employees.

Supervisors will get a combo box of subordinates. This is assuming
there wouldn't be more than 10,000 subordinates per supervisor.

--- a/php/orangehrm/themes/beyondT/css/leave.css
+++ b/php/orangehrm/themes/beyondT/css/leave.css
@@ -1,7 +1,7 @@
 /* CSS Document */
 
 .tableTopLeft {
-	background:url(../pictures/table_r1_c1.gif) no-repeat top left;
+	background:url(../pictures/table_r1_c1.gif) no-repeat top right;
 	width:12px;
 	height:11px;
 }
@@ -17,7 +17,7 @@
 }
 
 .tableMiddleLeft {
-	background:url(../pictures/table_r2_c1.gif) repeat-y top left;
+	background:url(../pictures/table_r2_c1.gif) repeat-y top right;
 	width:12px;
 	height: 4ex;
 }
@@ -32,7 +32,7 @@
 }
 
 .tableBottomLeft {
-	background:url(../pictures/table_r3_c1.gif) no-repeat bottom left;
+	background:url(../pictures/table_r3_c1.gif) no-repeat bottom right;
 	width:12px;
 	height:15px;
 }
@@ -129,4 +129,12 @@ hr {
 
 .error {
 	color: #ff0000;
+}
+
+.hide {
+	display:none;
+}
+
+.show {
+	display: table-row;
 }
